--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <ul class="menu">
             <li class="links"> <a href="#about"> About </a> </li>
             <li class="links"> <a href="#players"> My favourite hobby </a> </li>
-            <li class="links"> <a href="#inspiration"> My Inspiration </a></li>
-            <li class="links"> <a href="#writings"> Work </a> </li>
+            <li class="links"> <a href="#inspiration1"> My Inspiration </a></li>
+            <li class="links"> <a href="#inspiration2"> Work </a></li>
+            <li class="links"> <a href="#writings"> Writings </a> </li>
             <li class="links"> <a href="#contact"> Contact </a> </li>
         </ul>
     </center>
@@ -30,13 +31,17 @@
         <p> Tennis is a racket sport that can be played individually against a single opponent or between two teams of two players each. Each player uses a tennis racket that is strung with cord to strike a hollow rubber ball covered with felt over or around a net and into the opponent's court.
         </p>
     </section>
-    <section id="inspiration">
-        <h1> My Inspiration </h1>
+    <section id="inspiration1">
+    <h1> My Inspiration </h1> <div class="line"></div>
+        <div> <img src="https://tse3.mm.bing.net/th?id=OIP.EnS3yZjKjdm02TpNIlk-ggHaDt&pid=Api&P=0&w=317&h=159"> <img src="https://media.indiatimes.in/media/facebook/2019/Feb/rafael_nadal_1550040929_800x420.jpg"></div>
+    </section>
+    <section id="inspiration2">
+        <h1> Work </h1>
         <div class="line"> </div>
         <iframe width="1000" height="800" src="https://en.wikipedia.org/wiki/Roger_Federer" frameborder="0"></iframe>
         
         <section id="writings">
-        <h1> Work </h1>
+        <h1> Writings </h1>
             <div class="line"> </div>
             <a class="article" href="https://dansilvestre.com/roger-federer-career/#:~:text=Throughout%20his%20career%2C%20Federer%20has,Slams)%20and%20just%20five%20losses." target="_blank">
             Roger Federer Career: 5 Secrets for Insane Success
