--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> About Me </title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
 
 <body>
     <center>
@@ -47,3 +48,15 @@
             Roger Federer Career: 5 Secrets for Insane Success
             </a>
         </section>
+        <section id="contact">
+        <h1> Contact </h1>
+            <div class="line"> </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.5883486796965!2d72.88846041421347!3d19.125706755379813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c97f346053b7%3A0xacf72f56793d190a!2sWhitehat%20Education%20Technology%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1617798279738!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="contact_1"></div>
+            <a href="mailto:sheetalyatharth@gmail.com?Subject=hello">
+    <i class="fa fa-envelope">
+        
+        </i> &nbsp; &nbsp; &nbsp; <h3>
+        sheetalyatharth@gmail.com
+        </h3>
+        </a>
